syntax = "proto3";

package greet;

option java_package = "com.example.greet";
option java_multiple_files = true;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  //Unary
  rpc Greet(GreetRequest) returns (GreetResponse) {};

  rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse) {};

  rpc LongGreet(stream GreetRequest) returns (GreetResponse) {};

  rpc GreetEveryone(stream GreetRequest) returns (stream GreetResponse) {};

  rpc GreetWithDeadline(GreetRequest) returns (GreetResponse) {};
}